--- a/payment-link/index.html
+++ b/payment-link/index.html
@@ -786,7 +786,7 @@ form.addEventListener('submit', async (event) => {
     return;
   }
 	
-  const payoutTrackingId = `/payment-link/invoice.php?payment=${Date.now()}_${Math.floor(Math.random() * 9000000) + 1000000}`;
+  const payoutTrackingId = `https://www.highriskshop.com/payment-link/invoice.php?payment=${Date.now()}_${Math.floor(Math.random() * 9000000) + 1000000}`;
   const callback = encodeURIComponent(payoutTrackingId);
 
   try {
