--- a/crypto-payment-gateway-no-kyc-instant-payouts/index.html
+++ b/crypto-payment-gateway-no-kyc-instant-payouts/index.html
@@ -858,7 +858,7 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 <li>After following these steps customers will be able to use their crypto to pay for orders on your website.</li>
 <li>If you are having an issue with our plugin you can learn more about <a href="https://www.highriskshop.com/woocommerce-payment-gateway-troubleshooting/" target="_blank" rel="noopener">fixing common payment gateway issues</a>.</li>
 </ol>
-<p><img loading="lazy" decoding="async" class="aligncenter wp-image-1416 size-full" style="width: 80%;" src="https://www.highriskshop.com/crypto/screenshot.png" alt="WooCommerce crypto payment gateway instant payouts" width="1918" height="911"></p>
+<p><img loading="lazy" decoding="async" class="aligncenter wp-image-1416 size-full" style="width: 80%;" src="https://www.highriskshop.com/crypto/woocommerce-plugin.png" alt="WooCommerce crypto payment gateway instant payouts" width="1918" height="911"></p>
 </div></div></div></div></div></div>
 </div></div>
 <div class="vce-row-container" data-vce-boxed-width="true"><div class="vce-row vce-element--has-background vce-row--col-gap-30 vce-row-equal-height vce-row-content--top" id="el-650bba7f" data-vce-do-apply="all el-650bba7f">
