--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 
 <html lang="en" dir="ltr">
     <head>
+	<meta name="robots" content="noindex, follow">
         <meta charset="utf-8">
         <title>404</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:100,300,400,700" type="text/css" media="all">
@@ -183,7 +184,7 @@
                 cursor: pointer;
                 font-family: Inter;
                 height: 40px;
-                width: 132px;
+                width: 150px;
             }
         </style>
     </head>​
