--- a/instant-payment-gateway/index.html
+++ b/instant-payment-gateway/index.html
@@ -643,13 +643,13 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 <div class="storefront-primary-navigation"><div class="col-full">		<nav id="site-navigation" class="main-navigation" role="navigation" aria-label="Primary Navigation">
 		<button id="site-navigation-menu-toggle" class="menu-toggle" aria-controls="site-navigation" aria-expanded="false"><span>Menu</span></button>
 			<div class="primary-navigation"><ul id="menu-main" class="menu">
-<li id="menu-item-1418" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-1400 current_page_item menu-item-1418"><a href="https://www.highriskshop.com/instant-payment-gateway/" aria-current="page">Payment Gateway</a></li>
+<li id="menu-item-1418" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1418"><a href="https://www.highriskshop.com/instant-payment-gateway/">Payment Gateway</a></li><li id="menu-item-1418" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1418"><a href="https://www.highriskshop.com/crypto-payment-gateway-no-kyc-instant-payouts/">Crypto Payment Gateway</a></li>
 <li id="menu-item-88" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-88"><a href="https://www.highriskshop.com/payment-gateway/woocommerce-payment-redirect-to-other-woocommerce-website-api/">Self Hosted Checkout</a></li>
 <li id="menu-item-473" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-473"><a href="https://www.highriskshop.com/faq/">FAQ</a></li>
 <li id="menu-item-1447" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1447"><a href="https://t.me/webtechnicalsupport">Support</a></li>
 </ul></div>
 <div class="handheld-navigation"><ul id="menu-main-1" class="menu">
-<li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-1400 current_page_item menu-item-1418"><a href="https://www.highriskshop.com/instant-payment-gateway/" aria-current="page">Payment Gateway</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1418"><a href="https://www.highriskshop.com/instant-payment-gateway/">Payment Gateway</a></li><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1418"><a href="https://www.highriskshop.com/crypto-payment-gateway-no-kyc-instant-payouts/">Crypto Payment Gateway</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-88"><a href="https://www.highriskshop.com/payment-gateway/woocommerce-payment-redirect-to-other-woocommerce-website-api/">Self Hosted Checkout</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-473"><a href="https://www.highriskshop.com/faq/">FAQ</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1447"><a href="https://t.me/webtechnicalsupport">Support</a></li>
@@ -973,7 +973,7 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 </ul></div></div>					</div>
 											<div class="block footer-widget-2">
 						<div id="nav_menu-3" class="widget widget_nav_menu"><div class="menu-main-container"><ul id="menu-main-2" class="menu">
-<li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-1400 current_page_item menu-item-1418"><a href="https://www.highriskshop.com/instant-payment-gateway/" aria-current="page">Payment Gateway</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1418"><a href="https://www.highriskshop.com/instant-payment-gateway/">Payment Gateway</a></li><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1418"><a href="https://www.highriskshop.com/crypto-payment-gateway-no-kyc-instant-payouts/">Crypto Payment Gateway</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-88"><a href="https://www.highriskshop.com/payment-gateway/woocommerce-payment-redirect-to-other-woocommerce-website-api/">Self Hosted Checkout</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-473"><a href="https://www.highriskshop.com/faq/">FAQ</a></li>
 <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1447"><a href="https://t.me/webtechnicalsupport">Support</a></li>
