UPI INR Support

--- a/affiliate-white-label/index.html
+++ b/affiliate-white-label/index.html
@@ -800,6 +800,10 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 <td>Transfi</td>
 <td>$70</td>
 </tr>
+<tr>
+<td>UPI/IMPS</td>
+<td>₹100</td>
+</tr>
 </tbody>
 </table>
 <div>💡<span style="color: red;">All payouts in USDC (Polygon) except for ChangeNOW and Transfi payouts are in USDT (Polygon). Same wallet should work to receive both.</span>
