--- a/payment-link/index.html
+++ b/payment-link/index.html
@@ -714,6 +714,7 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
         <select id="currency" name="currency" required="">
             <option value="USD">USD</option>
             <option value="EUR">EUR</option>
+			<option value="INR">INR</option>
         </select><br>
         
         <label for="provider">Provider:</label><br>
@@ -734,6 +735,7 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 			<option value="utorg">UTORG</option>
 <option value="topper">Topper</option>
 			<option value="transfi">Transfi (USD)</option>
+			<option value="upi">UPI/IMPS (INR)</option>
         </select><br><br>
         
         <input style="border-radius:7px;" type="submit" value="Submit">
@@ -760,6 +762,7 @@ const minAmounts = {
   'mercuryo': 30,
   'topper': 10,
   'rampnetwork': 5,
+  'upi': 100,
   'moonpay': 30
 };
 
@@ -783,6 +786,11 @@ form.addEventListener('submit', async (event) => {
 
   if (currency !== 'USD' && (provider === 'wert' || provider === 'stripe' || provider === 'transfi' || provider === 'rampnetwork')) {
     paymentLinkDiv.innerHTML = `<p style="color: red;">${provider} supports USD currency only.<\/p>`;
+    return;
+  }
+  
+    if (currency !== 'INR' && (provider === 'upi')) {
+    paymentLinkDiv.innerHTML = `<p style="color: red;">${provider} supports INR currency only.<\/p>`;
     return;
   }
 	
