--- a/instant-payment-gateway/index.html
+++ b/instant-payment-gateway/index.html
@@ -779,7 +779,11 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 <td>$1</td>
 </tr>
 <tr>
-<td>Stripe USA</td>
+<td>Stripe (USA)</td>
+<td>$2</td>
+</tr>
+<tr>
+<td>coinbase PAY</td>
 <td>$2</td>
 </tr>
 <tr>
@@ -796,6 +800,10 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 </tr>
 <tr>
 <td>Alchemy Pay</td>
+<td>$5</td>
+</tr>
+<tr>
+<td>Robinhood (USA)</td>
 <td>$5</td>
 </tr>
 <tr>
