--- a/instant-payment-gateway/index.html
+++ b/instant-payment-gateway/index.html
@@ -852,7 +852,7 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 </tr>
 </tbody>
 </table>
-<div>💡<span style="color: red;">All payouts in USDC (Polygon) except for ChangeNOW and Transfi payouts are in USDT (Polygon). Same wallet should work to receive both.</span>
+<div>💡<span style="color: red;">All payouts in USDC (Polygon) except for ChangeNOW payouts are in USDT (Polygon). Same wallet should work to receive both.</span>
 </div>
 <div>⚠️ Due to UK 🇬🇧 FCA regulations some providers may enforce a 24-hour cooling-off period on UK customers only before they can execute transactions. To bypass this issue you may need to enable non-FCA provider like <b>wert.io</b> to allow your UK 🇬🇧 customers purchase without waiting.</div>
 </div></div></div></div></div></div>
