--- a/payment-link/index.html
+++ b/payment-link/index.html
@@ -1004,7 +1004,7 @@ form.addEventListener('submit', async (event) => {
 </tr>
 </tbody>
 </table>
-<div>💡<span style="color: red;">All payouts in USDC (Polygon) except for ChangeNOW and Transfi payouts are in USDT (Polygon). Same wallet should work to receive both.</span>
+<div>💡<span style="color: red;">All payouts in USDC (Polygon) except for ChangeNOW payouts are in USDT (Polygon). Same wallet should work to receive both.</span>
 </div>
 <div>⚠️ Due to UK 🇬🇧 FCA regulations some providers may enforce a 24-hour cooling-off period on UK customers only before they can execute transactions. To bypass this issue you may need to enable non-FCA provider like <b>wert.io</b> to allow your UK 🇬🇧 customers purchase without waiting.</div>
 </div></div></div></div></div></div>
