--- a/payment-link/index.html
+++ b/payment-link/index.html
@@ -694,7 +694,7 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 <div class="vce-col-content" data-vce-element-content="true" data-vce-do-apply="padding el-b0c2d469">
 <div class="vce-text-block"><div class="vce-text-block-wrapper vce" id="el-1657c0bf" data-vce-do-apply="all el-1657c0bf">
 <h2 style="text-align: center;"><strong>Generate a Payment Link Without KYC</strong></h2>
-<p>The payment link generation is intended for merchants and freelancers who don't have a website and want to get paid instantly in USDT without a bank or a merchant account.</p>
+<p>The payment link generation is intended for merchants and freelancers who don't have a website and want to get paid instantly in USDT or USDC without a bank or a merchant account.</p>
 <p>⚠️ Warning: Your wallet should be USDC (Polygon) compatible wallet to receive the payment successfully.</p>
 </div></div>
 <div class="vce-raw-html"><div class="vce-raw-html-wrapper" id="el-ff361561" data-vce-do-apply="all el-ff361561">
