--- a/affiliate-white-label/index.html
+++ b/affiliate-white-label/index.html
@@ -753,10 +753,6 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 <td>$5</td>
 </tr>
 <tr>
-<td>Paybis</td>
-<td>$5</td>
-</tr>
-<tr>
 <td>particle.network</td>
 <td>$5</td>
 </tr>
@@ -773,11 +769,23 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 <td>$10</td>
 </tr>
 <tr>
+<td>Unlimit</td>
+<td>$10</td>
+</tr>
+<tr>
+<td>Bitnovo</td>
+<td>$10</td>
+</tr>
+<tr>
 <td>Transak</td>
 <td>$15</td>
 </tr>
 <tr>
 <td>mercuryo.io</td>
+<td>$30</td>
+</tr>
+<tr>
+<td>SimpleSwap</td>
 <td>$30</td>
 </tr>
 <tr>
