--- a/instant-payment-gateway/index.html
+++ b/instant-payment-gateway/index.html
@@ -730,7 +730,7 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 <li>Instantly start accepting&nbsp;<strong>Credit/debit card (including MasterCard, Visa, and Maestro) – Apple Pay – Google Pay</strong> – SEPA or ACH local bank transfer.</li>
 <li>
 <strong>ZERO chargebacks</strong>&nbsp;and zero liability.</li>
-<li>Instant approval ready to install and&nbsp;<strong>accept payments in a few seconds</strong> supporting multi providers including but not limited to Stripe - MoonPay - wert.io - ramp.network - Guardarian - Transak - Particle.network - Mercuryo - Banxa - Alchemy Pay - Utorg - Transfi - ChangeNOW - Paybis - Topper - Sardine.</li>
+<li>Instant approval ready to install and&nbsp;<strong>accept payments in a few seconds</strong> supporting multi providers including but not limited to Stripe - MoonPay - wert.io - ramp.network - Guardarian - Transak - Particle.network - Mercuryo - Banxa - Alchemy Pay - Utorg - Transfi - ChangeNOW - Topper - Sardine - Unlimit - SimpleSwap - Bitnovo.</li>
 <li>
 <strong>Instant payouts to your USDC Polygon (MATIC) wallet</strong> with every payment you receive.</li>
 <li>Can be used with unlimited websites.</li>
@@ -791,10 +791,6 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 <td>$5</td>
 </tr>
 <tr>
-<td>Paybis</td>
-<td>$5</td>
-</tr>
-<tr>
 <td>particle.network</td>
 <td>$5</td>
 </tr>
@@ -811,11 +807,23 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 <td>$10</td>
 </tr>
 <tr>
+<td>Unlimit</td>
+<td>$10</td>
+</tr>
+<tr>
+<td>Bitnovo</td>
+<td>$10</td>
+</tr>
+<tr>
 <td>Transak</td>
 <td>$15</td>
 </tr>
 <tr>
 <td>mercuryo.io</td>
+<td>$30</td>
+</tr>
+<tr>
+<td>SimpleSwap</td>
 <td>$30</td>
 </tr>
 <tr>
